# ja_texthero

./: README.md  pyproject.toml
examples/: example.ipynb
ja_texthero/: __init__.py  nlp.py  preprocessing.py
