[tool.poetry]
name = "ja_texthero"
version = "0.1.0"
description = ""
authors = ["Takahashi Kanji <ka.takahashi@sansan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ginza = "^4.0.6"

[tool.poetry.dev-dependencies]
texthero = "^1.0.9"
flake8 = "^3.9.2"
pytest = "^6.2.4"
ipykernel = "^5.5.5"
gensim = "3.8.3"
nbformat = "5.1.3"
plotly = "^4.14.3"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
